[gd_scene load_steps=13 format=2]

[ext_resource path="res://nodes/entity/EntityBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/GameObjects/Mammoth/spr_obj_box.png" type="Texture" id=2]
[ext_resource path="res://scripts/entity/Game_objects/Obj_mammoth_box.gd" type="Script" id=3]
[ext_resource path="res://nodes/entity/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 0.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 16.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 5.5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 17.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.25, 2.75 )

[node name="Entity_Mammoth_Box" instance=ExtResource( 1 )]
z_index = -1
collision_layer = 0
collision_mask = 65
collision/safe_margin = 0.001
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 3 )
hp_max = 8
respawnable = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="0"]
modulate = Color( 1, 0, 0, 1 )
z_index = 2
collision_layer = 64
collision_mask = 0
moving_platform_apply_velocity_on_leave = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]
modulate = Color( 0, 0.156863, 1, 1 )
position = Vector2( 0, -19.5 )
shape = SubResource( 8 )

[node name="StaticBody2D" type="KinematicBody2D" parent="." index="1"]
collision_layer = 0
collision_mask = 2
moving_platform_apply_velocity_on_leave = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource( 4 )

[node name="Hitbox" parent="." index="2" instance=ExtResource( 4 )]
collision_mask = 2
damage = 3

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 20.5 )
shape = SubResource( 5 )

[node name="Sprite" parent="." index="3"]
frames = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2( 0, -1.5 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." index="7"]
collision_layer = 0
collision_mask = 468

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -1.5 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( -0.25, 17.25 )
shape = SubResource( 6 )

[connection signal="Damage_taken" from="." to="." method="_on_Entity_Mammoth_Box_Damage_taken"]
[connection signal="tree_exiting" from="." to="." method="_on_Entity_Mammoth_Box_tree_exiting"]
[connection signal="damage_dealt" from="Hitbox" to="." method="_on_Hitbox_damage_dealt"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
